tests/ui/unsized/unsized-function-argument-41229.rs
pub fn example(ref s: str) {}
//~^ ERROR the size for values of type

fn main() {}

// https://github.com/rust-lang/rust/issues/41229
